--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -26,7 +26,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
     
 3. Proprietary Rights
 
-    We own all intellectual property and other rights in the Interface and its contents, including (but not limited to) software, text, images, trademarks, service marks, copyrights, patents, and designs. This intellectual property is available under the terms of our copyright licenses and our Trademark Policy. Unlike the Interface, versions 1-3 of the Uniswap protocol are comprised entirely of open-source or source-available software running on the public Ethereum blockchain.
+    We own all intellectual property and other rights in the Interface and its contents, including (but not limited to) software, text, images, trademarks, service marks, copyrights, patents, and designs. This intellectual property is available under the terms of our copyright licenses and our <a href="https://uniswap.org/trademarks/" title="Uniswap Labs Trademark Guidelines">Trademark Guidelines</a>. Unlike the Interface, versions 1-3 of the Uniswap protocol are comprised entirely of open-source or source-available software running on the public Ethereum blockchain.
 
 4. Additional Rights.
 
@@ -34,7 +34,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
 5. Privacy
 
-    We care about your privacy. When you use the Interface, the only information we collect from you is your blockchain wallet address, the token names, symbols, or other blockchain identifiers of the tokens that you swap. We do not collect any personal information from you (e.g., your name or other identifiers that can be linked to you). We do, however, use third-party service providers, like Infura, Cloudflare, and Google Analytics, which may receive or independently obtain your personal information from publicly-available sources. We do not control how these third parties handle your data and you should review their privacy policies to understand how they collect, use, and share your personal information. In particular, please visit [https://policies.google.com/technologies/partner-sites](https://policies.google.com/technologies/partner-sites) to learn more about how Google uses data. By accessing and using the Interface, you understand and consent to our data practices and our service providers&#39; treatment of your information.
+    When you use the Interface, the only information we collect from you is your blockchain wallet address, completed transaction hashes, and the token names, symbols, or other blockchain identifiers of the tokens that you swap. We do not collect any personal information from you (e.g., your name or other identifiers that can be linked to you). We do, however, use third-party service providers, like Infura, Cloudflare, and Google Analytics, which may receive or independently obtain your personal information from publicly-available sources. We do not control how these third parties handle your data and you should review their privacy policies to understand how they collect, use, and share your personal information. In particular, please visit [https://policies.google.com/technologies/partner-sites](https://policies.google.com/technologies/partner-sites) to learn more about how Google uses data. By accessing and using the Interface, you understand and consent to our data practices and our service providers&#39; treatment of your information.
 
     We use the information we collect to detect, prevent, and mitigate financial crime and other illicit or harmful activities on the Interface. For these purposes, we may share the information we collect with blockchain analytics providers. We share information with these service providers only so that they help us promote the safety, security, and integrity of the Interface. We do not retain the information we collect any longer than necessary for these purposes.
     
@@ -75,7 +75,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
 12. Assumption of Risk
 
-    By accessing and using the Interface, you represent that you are financially and technically sophisticated enough to understand the inherent risks associated with using cryptographic and blockchain-based systems, and that you have a working knowledge of the usage and intricacies of digital assets such as bitcoin (BTC), ether (ETH), and other digital tokens such as those following the Ethereum Token Standard (ERC-20). You understand that blockchain-based transactions are irreversible. 
+    By accessing and using the Interface, you represent that you are financially and technically sophisticated enough to understand the inherent risks associated with using cryptographic and blockchain-based systems, and that you have a working knowledge of the usage and intricacies of digital assets such as bitcoin (BTC), ether (ETH), and other digital tokens such as those following the Ethereum Token Standard (ERC-20). In particular, you understand that blockchain-based transactions are irreversible. 
     
     You further understand that the markets for these digital assets are highly volatile due to factors including (but not limited to) adoption, speculation, technology, security, and regulation. You acknowledge and accept that the cost and speed of transacting with cryptographic and blockchain-based systems such as Ethereum are variable and may increase dramatically at any time. You further acknowledge and accept the risk that your digital assets may lose some or all of their value while they are supplied to the Protocol through the Interface, you may suffer loss due to the fluctuation of prices of tokens in a trading pair or liquidity pool, and, especially in expert modes, experience significant price slippage and cost. You understand that anyone can create a token, including fake versions of existing tokens and tokens that falsely claim to represent projects, and acknowledge and accept the risk that you may mistakenly trade those or other tokens. You further acknowledge that we are not responsible for any of these variables or risks, do not own or control the Protocol, and cannot be held liable for any resulting losses that you experience while accessing or using the Interface. Accordingly, you understand and agree to assume full responsibility for all of the risks of accessing and using the Interface to interact with the Protocol.
 
@@ -107,7 +107,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
 19. Governing Law
 
-    You agree that the laws of the State of New York, without regard to principles of conflict of laws, govern this Agreement and any Dispute between you and us. You further agree that the Interface shall be deemed to be based solely in the State of New York, and that although the Interface may be available in other jurisdictions, its availability does not give rise to general or specific personal jurisdiction in any forum outside the State of New York. Any arbitration conducted pursuant to this Agreement shall be governed by the Federal Arbitration Act. You agree that New York, New York is the proper forum for any appeals of an arbitration award or for court proceedings in the event that this Agreement&#39;s binding arbitration clause is found to be unenforceable.
+    You agree that the laws of the State of New York, without regard to principles of conflict of laws, govern this Agreement and any Dispute between you and us. You further agree that the Interface shall be deemed to be based solely in the State of New York, and that although the Interface may be available in other jurisdictions, its availability does not give rise to general or specific personal jurisdiction in any forum outside the State of New York. Any arbitration conducted pursuant to this Agreement shall be governed by the Federal Arbitration Act. You agree that the federal and state courts of New York County, New York are the proper forum for any appeals of an arbitration award or for court proceedings in the event that this Agreement&#39;s binding arbitration clause is found to be unenforceable.
 
 20. Entire Agreement 
     
