--- a/src/pages/terms-of-service.mdx
+++ b/src/pages/terms-of-service.mdx
@@ -28,7 +28,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
     We own all intellectual property and other rights in the Interface and its contents, including (but not limited to) software, text, images, trademarks, service marks, copyrights, patents, and designs. This intellectual property is available under the terms of our copyright licenses and our <a href="https://uniswap.org/trademarks/" title="Uniswap Labs Trademark Guidelines">Trademark Guidelines</a>. Unlike the Interface, versions 1-3 of the Uniswap protocol are comprised entirely of open-source or source-available software running on the public Ethereum blockchain.
 
-4. Additional Rights.
+4. Additional Rights
 
     We reserve the following rights, which do not constitute obligations of ours: (a) with or without notice to you, to modify, substitute, eliminate or add to the Interface; (b) to review, modify, filter, disable, delete and remove any and all content and information from the Interface; and (c) to cooperate with any law enforcement, court or government investigation or order or third party requesting or directing that we disclose information or content or information that you provide.
 
@@ -36,7 +36,7 @@ This Terms of Service Agreement (the &quot;Agreement&quot;) explains the terms a
 
     When you use the Interface, the only information we collect from you is your blockchain wallet address, completed transaction hashes, and the token names, symbols, or other blockchain identifiers of the tokens that you swap. We do not collect any personal information from you (e.g., your name or other identifiers that can be linked to you). We do, however, use third-party service providers, like Infura, Cloudflare, and Google Analytics, which may receive or independently obtain your personal information from publicly-available sources. We do not control how these third parties handle your data and you should review their privacy policies to understand how they collect, use, and share your personal information. In particular, please visit [https://policies.google.com/technologies/partner-sites](https://policies.google.com/technologies/partner-sites) to learn more about how Google uses data. By accessing and using the Interface, you understand and consent to our data practices and our service providers&#39; treatment of your information.
 
-    We use the information we collect to detect, prevent, and mitigate financial crime and other illicit or harmful activities on the Interface. For these purposes, we may share the information we collect with blockchain analytics providers. We share information with these service providers only so that they help us promote the safety, security, and integrity of the Interface. We do not retain the information we collect any longer than necessary for these purposes.
+    We use the information we collect to detect, prevent, and mitigate financial crime and other illicit or harmful activities on the Interface. For these purposes, we may share the information we collect with blockchain analytics providers. We share information with these service providers only so that they can help us promote the safety, security, and integrity of the Interface. We do not retain the information we collect any longer than necessary for these purposes.
     
     Please note that when you use the Interface, you are interacting with the Ethereum blockchain, which provides transparency into your transactions. Uniswap Labs does not control and is not responsible for any information you make public on the Ethereum blockchain by taking actions through the Interface.
 
