update trademark policy

--- a/src/pages/trademarks.mdx
+++ b/src/pages/trademarks.mdx
@@ -10,9 +10,9 @@ Uniswap Labs distributed the open source Uniswap protocol (versions 1, 2, and 3)
 
 This policy covers all of our trademarks and services marks, whether they are registered or not, including, among others:
 
-1. Our word trademarks and service marks: UNISWAP®, UNI™, and UNISWAP LABS™ (&quot;Uniswap Labs wordmarks&quot;).
+1. Our word trademarks and service marks: UNISWAP®, UNI™, and UNISWAP LABS™ (&quot;Uniswap wordmarks&quot;).
 
-2. Uniswap Labs [logos](https://uniswap.org/about/#brand).
+2. Uniswap [logos](https://uniswap.org/about/#brand).
 
 If you want to report misuse of a Uniswaps Labs trademark, please contact us at legal@uniswap.org.
 
@@ -20,10 +20,10 @@ If you want to report misuse of a Uniswaps Labs trademark, please contact us at 
 
 You may do the following _without_ receiving specific permission from Uniswap Labs:
 
-- Use Uniswap Labs wordmarks in text to truthfully refer to and/or link to unmodified Uniswap smart contracts, protocols, interfaces, programs, products, services and technologies (&quot;Uniswap software&quot;).
-- Use the Uniswap Labs wordmarks to truthfully describe modified versions of Uniswap software that you may create or make available. For example, you may say &quot;This software is derived from Uniswap software.&quot; or &quot;This service uses software derived from Uniswap software.&quot;
-- Use the Uniswap Labs logo in software or aggregators that integrate with Uniswap software to truthfully refer to, and, where possible, link to the applicable Uniswap software hosted on the Ethereum blockchain.
-- Use Uniswap Labs wordmarks to clearly signal to users that there is no affiliation with or endorsement by Uniswap Labs.
+- Use Uniswap wordmarks in text to truthfully refer to and/or link to unmodified Uniswap smart contracts, protocols, interfaces, programs, products, services and technologies (&quot;Uniswap software&quot;).
+- Use the Uniswap wordmarks to truthfully describe modified versions of Uniswap software that you may create or make available. For example, you may say &quot;This software is derived from Uniswap software.&quot; or &quot;This service uses software derived from Uniswap software.&quot;
+- Use the Uniswap logos in software or aggregators that integrate with Uniswap software to truthfully refer to, and, where possible, link to the applicable Uniswap software hosted on the Ethereum blockchain.
+- Use Uniswap wordmarks to clearly signal to users that there is no affiliation with or endorsement by Uniswap Labs.
 - Follow the terms of the open source licenses for Uniswap software.
 
 ## **When allowed, how can I use a Uniswap Labs trademark?**
@@ -31,7 +31,7 @@ You may do the following _without_ receiving specific permission from Uniswap La
 - You must include a trademark attribution notice at the first or most prominent mention of the mark on a webpage, document or documentation, such as: &quot;[Uniswap Labs trademark] is a trademark of Uniswap Labs.&quot;
 - You may not change the logo except to scale it. If the logo is used, you must give the Uniswap Labs logo adequate spacing from the other elements on the webpage or document to ensure legibility and reduce the likelihood of confusion.
 - You must always use the wordmarks in their exact form and with the correct spelling, neither abbreviated, hyphenated, nor combined with any other word or words.
-- You must always use the Uniswap Labs wordmarks only as an adjective, never as a noun or verb, or in plural or possessive forms.
+- You must always use the Uniswap wordmarks only as an adjective, never as a noun or verb, or in plural or possessive forms.
   - Instead, use the generic term for the Uniswap product or service following the trademark.
   - For example: Uniswap protocol, Uniswap interface, Sybil website.
 
