--- a/src/pages/blog/019-brand-update/index.mdx
+++ b/src/pages/blog/019-brand-update/index.mdx
@@ -46,6 +46,8 @@ On Wednesday, November 10th at 1pm ET, the Labs design team will share a present
 
 We’re thrilled to share these updates and look forward to hearing your thoughts over the coming week.
 
+More details for community feedback can be found on the [forum post](https://gov.uniswap.org/t/uniswap-protocol-brand-update-request-for-comment/14822).
+
 ---
 
 To get involved and stay up to date:
